--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       </div>
     </section>
     <article>
-      <div class="containterr">
+      <div class="containterr shadow">
         <div class="redes">
           <a href="https://www.facebook.com/" target="blanc" class="icon-facebook"></a>
           <a href="https://www.instagram.com/" target="blanc" class="icon-instagram"></a>
