--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -97,7 +97,7 @@
 
         <section>
             <article>
-                <div class="containterr">
+                <div class="containterr shadow">
                     <div class="redes">
                         <a href="https://www.facebook.com/" target="blanc" class="icon-facebook"></a>
                         <a href="https://www.instagram.com/" target="blanc" class="icon-instagram"></a>
