--- a/pages/menu.html
+++ b/pages/menu.html
@@ -64,7 +64,7 @@
     <section>
       <div class="container">
         <div class="row">
-          <div class="col-sm-4">
+          <div id="menu" class="col-sm-4 animacion">
             <img src="../imagenes/menu2.jpg" class="card-img-top" alt="...">
             <div class="card-body shadow bg-light">
               <h5 class="card-title text-center destacado">Opción 1 - Menú ligero</h5>
@@ -76,7 +76,7 @@
               </p>
             </div>
           </div>
-          <div class="col-sm-4">
+          <div id="menu"  class="col-sm-4 animacion">
             <img src="../imagenes/menu1.jpg" class="card-img-top" alt="...">
             <div class="card-body shadow bg-light ">
               <h5 class="card-title text-center destacado ">Opción 2 - Menú medio</h5>
@@ -93,7 +93,7 @@
                 Patatas fritas + Café Hamburguesa + Patatas + Refresco.</p>
             </div>
           </div>
-          <div class="col-sm-4">
+          <div id="menu" class="col-sm-4 animacion">
             <img src="../imagenes/menu3.jpg" class="card-img-top" alt="...">
             <div class="card-body shadow bg-light ">
               <h5 class="card-title text-center destacado">Opción 3 Menú especial</h5>
@@ -113,7 +113,7 @@
     </section>
     <section>
       <article>
-        <div class="containterr">
+        <div class="containterr shadow">
           <div class="redes">
             <a href="https://www.facebook.com/" target="blanc" class="icon-facebook"></a>
             <a href="https://www.instagram.com/" target="blanc" class="icon-instagram"></a>
