--- a/pages/media.html
+++ b/pages/media.html
@@ -107,7 +107,7 @@
                                 <img src="../imagenes/menu1.jpg" alt="" class="rounded shadow">
                             </div>
                             <div class="col-lg-4">
-                                <img src="../imagenes/DALEQUEVA.jpg" alt="" class="rounded shadow">
+                                <img src="../imagenes/DALEQUEVA2-min.jpg" alt="" class="rounded shadow">
                             </div>
 
                 </section>
