--- a/pages/media.html
+++ b/pages/media.html
@@ -101,7 +101,7 @@
                                 <img src="../imagenes/DALEQUEVA1.jpg" alt="" class="rounded shadow">
                             </div>
                             <div class="col-lg-4">
-                                <img src="../imagenes/DALEQUEVA2.jpg" alt="" class="rounded shadow">
+                                <img src="../imagenes/DALEQUEVA2-min.jpg" alt="" class="rounded shadow">
                             </div>
                             <div class="col-lg-4">
                                 <img src="../imagenes/menu1.jpg" alt="" class="rounded shadow">
