--- a/pages/media.html
+++ b/pages/media.html
@@ -74,6 +74,14 @@
                             src="https://www.youtube.com/embed/D1PWXjTDKGE" title="coffe" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen class="video"></iframe>
+                        <iframe class="p-3 videomedia" width="100%" height="315"
+                            src="https://www.youtube.com/embed/-5KAN9_CzSA" title="MUSICA" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen class="video"></iframe>
+                        <iframe class="p-3 videomedia" width="100%" height="315"
+                            src="https://www.youtube.com/embed/D1PWXjTDKGE" title="coffe" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen class="video"></iframe>
                     </div>
 
                 </div>
@@ -109,6 +117,26 @@
                             <div class="col-lg-4">
                                 <img src="../imagenes/DALEQUEVA2-min.jpg" alt="" class="rounded shadow">
                             </div>
+                            <div class="col-lg-4">
+                                <img src="../imagenes/DALEQUEVA2-min.jpg" alt="" class="rounded shadow">
+                            </div>
+                            <div class="col-lg-4">
+                                <img src="../imagenes/menu1.jpg" alt="" class="rounded shadow">
+                            </div>
+                            <div class="col-lg-4">
+                                <img src="../imagenes/DALEQUEVA2-min.jpg" alt="" class="rounded shadow">
+                            </div>
+                            <div class="col-lg-4">
+                                <img src="../imagenes/DALEQUEVA2-min.jpg" alt="" class="rounded shadow">
+                            </div>
+                            <div class="col-lg-4">
+                                <img src="../imagenes/menu1.jpg" alt="" class="rounded shadow">
+                            </div>
+                            <div class="col-lg-4">
+                                <img src="../imagenes/DALEQUEVA2-min.jpg" alt="" class="rounded shadow">
+                            </div>
+
+
 
                 </section>
 
