--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&family=Open+Sans:wght@300&display=swap"
     rel="stylesheet">
-  <meta name="descripcion" content="conoce el mejor cafe del mundo">
+  <meta name="description" content="conoce el mejor cafe del mundo">
   <meta name="keywords" content="cafe, comprar cafe, el mejor cafe del mundo, cafe argentina, venta de cafe">
 
 
