--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-              <div class="navbar-nav destacado">
-                <a class="nav-link active" aria-current="page" href="#">HOME</a>
+              <div class="navbar-nav">
+                <a class="nav-link active" aria-current="page " href="#">HOME</a>
                 <a class="nav-link" href="./pages/menu.html">MENU</a>
                 <a class="nav-link" href="./pages/nosotros.html">NOSOTROS</a>
                 <a class="nav-link" href="./pages/media.html">MEDIA</a>
