--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -65,6 +65,17 @@
       <div class="container">
         <div class="row">
                     <div class="card p-1 rounded bg-dark bg-gradient">
+                        <select class="form-select mb-3 shadow" aria-label="Default select example">
+                            <option selected>Sexo</option>
+                            <option value="1">Hombre</option>
+                            <option value="2">Mujer</option>
+                          </select>
+                          <div class="form-floating mb-3 shadow">
+                            <input type="date" class="form-control" id="floatingInput">
+                            <label for="Textarea">
+                                <p>Fecha de nacimiento</p>
+                            </label>
+                        </div>
                         <div class="form-floating mb-3 shadow">
                             <input type="text" class="form-control" id="floatingInput">
                             <label for="floatingTextarea">
@@ -99,6 +110,7 @@
             <article>
                 <div class="containterr shadow">
                     <div class="redes">
+
                         <a href="https://www.facebook.com/" target="blanc" class="icon-facebook"></a>
                         <a href="https://www.instagram.com/" target="blanc" class="icon-instagram"></a>
                         <a href="https://www.whatsapp.com/" target="blanc" class="icon-whatsapp"></a>
@@ -113,7 +125,7 @@
                 <div class="text-center bg-dark">
                     <div class="card-body">
                         <h5 class="card-title text-light">The Coffee © 2022</h5>
-                        <p class="card-text text-light"> • Cafe Fratelli Franqueadora LTDA • CNPJ: 31.520.143/0001-58
+                        <p class="card-text text-light"> • Cafe Olsen
                         </p>
                     </div>
                 </div>
