--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <div class="text-center bg-dark">
           <div class="card-body">
             <h5 class="card-title text-light">The Coffee © 2022</h5>
-            <p class="card-text text-light"> • Cafe Fratelli Franqueadora LTDA • CNPJ: 31.520.143/0001-58</p>
+            <p class="card-text text-light"> • Cafe Olsen LTDA • /p>
           </div>
         </div>
       </div>
