--- a/pages/media.html
+++ b/pages/media.html
@@ -159,7 +159,7 @@
                 <div class="text-center bg-dark">
                     <div class="card-body">
                         <h5 class="card-title text-light">The Coffee © 2022</h5>
-                        <p class="card-text text-light"> • Cafe Fratelli Franqueadora LTDA • CNPJ: 31.520.143/0001-58
+                        <p class="card-text text-light"> • Olsen
                         </p>
                     </div>
                 </div>
