--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -65,16 +65,16 @@
       <div class="container">
         <div class="row">
                     <div class="card p-1 rounded bg-dark bg-gradient">
-                          <div class="form-floating mb-3 shadow">
-                            <input type="date" class="form-control" id="floatingInput">
-                            <label for="Textarea">
-                                <p>Fecha de nacimiento</p>
-                            </label>
-                        </div>
                         <div class="form-floating mb-3 shadow">
                             <input type="text" class="form-control" id="floatingInput">
                             <label for="floatingTextarea">
                                 <p>Nombre</p>
+                            </label>
+                        </div>
+                          <div class="form-floating mb-3 shadow">
+                            <input type="date" class="form-control" id="floatingInput">
+                            <label for="Textarea">
+                                <p>Fecha de nacimiento</p>
                             </label>
                         </div>
                         <select class="form-select mb-3 shadow" aria-label="Default select example">
@@ -119,13 +119,13 @@
             </article>
         </section>
     </main>
-    <footer">
-        <div class="container-fluid position-absolute bottom-0 end-0">
+    <footer>
+        <div class="container-fluid fixed-bottom">
             <div class="row">
                 <div class="text-center bg-dark">
                     <div class="card-body">
                         <h5 class="card-title text-light">The Coffee © 2022</h5>
-                        <p class="card-text text-light"> • Cafe Olsen
+                        <p class="card-text text-light"> • Olsen
                         </p>
                     </div>
                 </div>
