--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
           <div class="col d-flex justify-content-end">
             <a class="navbar-brand" href="#">
-              <img src="./imagenes/logo.jpg" alt="imagenlogo" width="80" height="80" class="rounded-circle shadow ">
+              <img src="./imagenes/logo.jpg" alt="imagenlogo" width="150" height="150" class="rounded-circle shadow ">
             </a>
           </div>
           <div class="col">
@@ -38,11 +38,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page " href="#">HOME</a>
-                <a class="nav-link" href="./pages/menu.html">MENU</a>
-                <a class="nav-link" href="./pages/nosotros.html">NOSOTROS</a>
-                <a class="nav-link" href="./pages/media.html">MEDIA</a>
-                <a class="nav-link" href="./pages/contacto.html">CONTACTO</a>
+                <a class="nav-link active" aria-current="page " href="#"><p class=fs-4>HOME</p></a>
+                <a class="nav-link" href="./pages/menu.html"><p class=fs-4>MENU</p></a>
+                <a class="nav-link" href="./pages/nosotros.html"><p class=fs-4>NOSOTROS</p></a>
+                <a class="nav-link" href="./pages/media.html"><p class=fs-4>MEDIA</p></a>
+                <a class="nav-link" href="./pages/contacto.html"><p class=fs-4>CONTACTO</p></a>
               </div>
             </div>
           </div>
@@ -51,15 +51,6 @@
     </div>
   </header>
   <main>
-    <section class="bg-secondary">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
-            <h1 class="display-5 fw-normal text-dark">THE COFFE HOUSE</h1>
-          </div>
-        </div>
-      </div>
-    </section>
     <section>
       <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
@@ -70,7 +61,7 @@
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
             aria-label="Slide 3"></button>
         </div>
-        <div class="carousel-inner">
+        <div class="carousel-inner carouse">
           <div class="carousel-item active">
             <img src="imagenes/DALEQUEVA.jpg" class="d-block w-100" alt="cafes">
           </div>
@@ -94,10 +85,10 @@
       </div>
     </section>
 
-    <section class="container-fluid mt-5">
+    <section>
       <div class="container">
         <div class="row">
-          <div class="col-sm mb-3 bg-dark bg-gradient text-center">
+          <div class="col m-3 bg-dark bg-gradient text-center">
             <img src="imagenes/fotomenu.jpg" class="card-img-top rounded mt-3 shadow" alt="cafedibujo">
             <div class="card-body">
               <h5 class="card-title destacado text-light">DISFRUTA DEL CAFÉ DEL MUNDO</h5>
@@ -105,13 +96,13 @@
                 Y llevate
                 a
                 tu casa el mejor café del mundo. Descubrí por qué #SomosCafe</p>
-              <a href="./pages/menu.html" class="btn btn-primary btn-lg btn-warning shadow destacado">MENU</a>
+              <a href="./pages/menu.html" class="btn btn-primary btn-lg btn-warning shadow">MENU</a>
             </div>
           </div>
-          <div class="col-sm mb-3 bg-dark bg-gradient text-center">
+          <div class="col m-3 bg-dark bg-gradient text-center">
             <div class="card-body">
               <h5 class="card-title"></h5>
-              <a href="./pages/contacto.html" class="btn btn-primary btn-lg btn-warning shadow destacado">CONTACTO</a>
+              <a href="./pages/contacto.html" class="btn btn-primary btn-lg btn-warning shadow">CONTACTO</a>
             </div>
             <img src="imagenes/quienes 4.jpg" class="card-img-bottom rounded mb-3 shadow" alt="...">
           </div>
