--- a/pages/menu.html
+++ b/pages/menu.html
@@ -22,12 +22,12 @@
 
 <body class="bg-secondary bg-gradient">
   <header>
-    <div class="container-fluid">
+    <div class="container-fluid mb-5">
       <div class="row">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
           <div class="col d-flex justify-content-end">
-            <a class="navbar-brand" href="../index.html">
-              <img src="../imagenes/logo.jpg" alt="imagenlogo" width="80" height="80" class="rounded-circle shadow ">
+            <a class="navbar-brand" href="#">
+              <img src="../imagenes/logo.jpg" alt="imagenlogo" width="150" height="150" class="rounded-circle shadow ">
             </a>
           </div>
           <div class="col">
@@ -51,16 +51,7 @@
   </header>
 
   <main>
-    <section>
-      <div class="container">
-        <div class="row">
-          <div class="pricing-header p-3 mx-auto text-center">
-            <h1 class="display-5 fw-normal">MENU</h1>
-            <p class="fs-5 text-dark destacado">Elige el que más te gusta y lo llevamos donde estés.</p>
-          </div>
-        </div>
-      </div>
-    </section>
+
     <section>
       <div class="container">
         <div class="row">
