--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -22,13 +22,12 @@
 
 <body class="bg-secondary bg-gradient">
     <header>
-        <div class="container-fluid">
-            <div class="row ">
-                <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                    <div class="col d-flex justify-content-end">
-                        <a class="navbar-brand" href="../index.html">
-                            <img src="../imagenes/logo.jpg" alt="imagenlogo" width="80" height="80"
-                                class="rounded-circle shadow ">
+        <div class="container-fluid mb-5">
+            <div class="row">
+              <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <div class="col d-flex justify-content-end">
+                  <a class="navbar-brand" href="#">
+                    <img src="../imagenes/logo.jpg" alt="imagenlogo" width="150" height="150" class="rounded-circle shadow ">
                         </a>
                     </div>
                     <div class="col">
@@ -53,15 +52,7 @@
     </header>
 
     <main>
-        <section>
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
-                        <h1 class="display-5 fw-normal">NOSOTROS</h1>
-                    </div>
-                </div>
-            </div>
-        </section>
+
 
             <section class="m-1">
                 <div class="container">
