--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
           <div class="col d-flex justify-content-end">
             <a class="navbar-brand" href="#">
-              <img src="./imagenes/logo.jpg" alt="imagenlogo" width="150" height="150" class="rounded-circle shadow ">
+              <img src="./imagenes/logo.png" alt="imagenlogo" width="130" height="130" class="rounded-circle shadow ">
             </a>
           </div>
           <div class="col">
@@ -38,11 +38,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page " href="#"><p class=fs-4>HOME</p></a>
-                <a class="nav-link" href="./pages/menu.html"><p class=fs-4>MENU</p></a>
-                <a class="nav-link" href="./pages/nosotros.html"><p class=fs-4>NOSOTROS</p></a>
-                <a class="nav-link" href="./pages/media.html"><p class=fs-4>MEDIA</p></a>
-                <a class="nav-link" href="./pages/contacto.html"><p class=fs-4>CONTACTO</p></a>
+                <a class="nav-link active" aria-current="page " href="#"><p class=fs-5>HOME</p></a>
+                <a class="nav-link" href="./pages/menu.html"><p class=fs-5>MENU</p></a>
+                <a class="nav-link" href="./pages/nosotros.html"><p class=fs-5>NOSOTROS</p></a>
+                <a class="nav-link" href="./pages/media.html"><p class=fs-5>MEDIA</p></a>
+                <a class="nav-link" href="./pages/contacto.html"><p class=fs-5>CONTACTO</p></a>
               </div>
             </div>
           </div>
