--- a/pages/media.html
+++ b/pages/media.html
@@ -27,7 +27,7 @@
               <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="col d-flex justify-content-end">
                   <a class="navbar-brand" href="#">
-                    <img src="../imagenes/logo.jpg" alt="imagenlogo" width="150" height="150" class="rounded-circle shadow ">
+                    <img src="../imagenes/logo.png" alt="imagenlogo" width="100" height="100"  class="rounded-circle shadow ">
                         </a>
                     </div>
                     <div class="col">
