--- a/pages/media.html
+++ b/pages/media.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&family=Open+Sans:wght@300&display=swap"
-        rel="stylesheet">
+      rel="stylesheet">
     <meta name="descripcion" content="conoce el mejor cafe del mundo">
     <meta name="keywords" content="cafe, comprar cafe, el mejor cafe del mundo, cafe argentina, venta de cafe">
 
@@ -27,7 +27,7 @@
               <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="col d-flex justify-content-end">
                   <a class="navbar-brand" href="#">
-                    <img src="../imagenes/logo.png" alt="imagenlogo" width="100" height="100"  class="rounded-circle shadow ">
+                    <img src="../imagenes/logo.png" alt="imagenlogo" width="130" height="130"  class="rounded-circle shadow ">
                         </a>
                     </div>
                     <div class="col">
@@ -38,11 +38,11 @@
                         </button>
                         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                             <div class="navbar-nav destacado">
-                                <a class="nav-link" href="../index.html">HOME</a>
-                                <a class="nav-link" href="menu.html">MENU</a>
-                                <a class="nav-link" href="nosotros.html">NOSOTROS</a>
-                                <a class="nav-link active" href="#">MEDIA</a>
-                                <a class="nav-link" href="contacto.html">CONTACTO</a>
+                                <a class="nav-link" href="../index.html"><p class=fs-5>HOME</p></a>
+                                <a class="nav-link" href="menu.html"><p class=fs-5>MENU</p></a>
+                                <a class="nav-link" href="nosotros.html"><p class=fs-5>NOSOTROS</p></a>
+                                <a class="nav-link active" href="#"><p class=fs-5>MEDIA</p></a>
+                                <a class="nav-link" href="contacto.html"><p class=fs-5>CONTACTO</p></a>
                             </div>
                         </div>
                     </div>
