--- a/pages/menu.html
+++ b/pages/menu.html
@@ -27,7 +27,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
           <div class="col d-flex justify-content-end">
             <a class="navbar-brand" href="#">
-              <img src="../imagenes/logo.png" alt="imagenlogo" width="100" height="100" class="rounded-circle shadow ">
+              <img src="../imagenes/logo.png" alt="imagenlogo" width="130" height="130" class="rounded-circle shadow ">
             </a>
           </div>
           <div class="col">
@@ -37,11 +37,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav destacado">
-                <a class="nav-link" href="../index.html">HOME</a>
-                <a class="nav-link active" href="#">MENU</a>
-                <a class="nav-link" href="nosotros.html">NOSOTROS</a>
-                <a class="nav-link" href="media.html">MEDIA</a>
-                <a class="nav-link" href="contacto.html">CONTACTO</a>
+                <a class="nav-link" href="../index.html"><p class=fs-5>HOME</p></a>
+                <a class="nav-link active" href="#"><p class=fs-5>MENU</p></a>
+                <a class="nav-link" href="nosotros.html"><p class=fs-5>NOSOTROS</p></a>
+                <a class="nav-link" href="media.html"><p class=fs-5>MEDIA</p></a>
+                <a class="nav-link" href="contacto.html"><p class=fs-5>CONTACTO</p></a>
               </div>
             </div>
           </div>
