--- a/pages/menu.html
+++ b/pages/menu.html
@@ -37,11 +37,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav destacado">
-                <a class="nav-link" href="../index.html"><p class=fs-5>HOME</p></a>
-                <a class="nav-link active" href="#"><p class=fs-5>MENU</p></a>
-                <a class="nav-link" href="nosotros.html"><p class=fs-5>NOSOTROS</p></a>
-                <a class="nav-link" href="media.html"><p class=fs-5>MEDIA</p></a>
-                <a class="nav-link" href="contacto.html"><p class=fs-5>CONTACTO</p></a>
+                <a class="nav-link" href="../index.html">HOME</a>
+                <a class="nav-link active" href="#">MENU</a>
+                <a class="nav-link" href="nosotros.html">NOSOTROS</a>
+                <a class="nav-link" href="media.html">MEDIA</a>
+                <a class="nav-link" href="contacto.html">CONTACTO</a>
               </div>
             </div>
           </div>
