--- a/pages/menu.html
+++ b/pages/menu.html
@@ -15,8 +15,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&family=Open+Sans:wght@300&display=swap"
     rel="stylesheet">
-  <meta name="descripcion" content="conoce el mejor cafe del mundo">
+  <meta name="description" content="conoce el mejor cafe del mundo">
   <meta name="keywords" content="cafe, comprar cafe, el mejor cafe del mundo, cafe argentina, venta de cafe">
+
+
 
 </head>
 
@@ -26,7 +28,7 @@
       <div class="row">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
           <div class="col d-flex justify-content-end">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="../index.html">
               <img src="../imagenes/logo.png" alt="imagenlogo" width="130" height="130" class="rounded-circle shadow ">
             </a>
           </div>
@@ -36,12 +38,12 @@
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-              <div class="navbar-nav destacado">
-                <a class="nav-link" href="../index.html">HOME</a>
-                <a class="nav-link active" href="#">MENU</a>
-                <a class="nav-link" href="nosotros.html">NOSOTROS</a>
-                <a class="nav-link" href="media.html">MEDIA</a>
-                <a class="nav-link" href="contacto.html">CONTACTO</a>
+              <div class="navbar-nav">
+                <a class="nav-link" href="../index.html"><p class="fs-5 fondo">HOME</p></a>
+                <a class="nav-link active" href="#"><p class="fs-5">MENU</p></a>
+                <a class="nav-link" href="nosotros.html"><p class="fs-5">NOSOTROS</p></a>
+                <a class="nav-link" href="media.html"><p class=fs-5>MEDIA</p></a>
+                <a class="nav-link" href="contacto.html"><p class=fs-5>CONTACTO</p></a>
               </div>
             </div>
           </div>
@@ -55,7 +57,7 @@
     <section>
       <div class="container">
         <div class="row">
-          <div id="menu" class="col-md animacion">
+          <div id="menu" class="col-sm animacion">
             <img src="../imagenes/menu2.jpg" class="card-img-top" alt="...">
             <div class="card-body shadow bg-light">
               <h5 class="card-title text-center destacado">Opción 1 - Menú ligero</h5>
@@ -70,7 +72,7 @@
           <div id="menu"  class="col-sm animacion">
             <img src="../imagenes/menu1.jpg" class="card-img-top" alt="...">
             <div class="card-body shadow bg-light ">
-              <h5 class="card-title text-center destacado ">Opción 2 - Menú medio</h5>
+              <h5 class="card-title text-center destacado">Opción 2 - Menú medio</h5>
               <p class="card-text">Nuestra cafetería es reconocida mundialmente por la extraordinaria calidad de los
                 menús
                 medios ofrecidos. Si pasa por el lugar, no se olvide de probar uno de nuestros riquísimos menús
