--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -15,9 +15,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&family=Open+Sans:wght@300&display=swap"
       rel="stylesheet">
-    <meta name="descripcion" content="conoce el mejor cafe del mundo">
+    <meta name="description" content="conoce el mejor cafe del mundo">
     <meta name="keywords" content="cafe, comprar cafe, el mejor cafe del mundo, cafe argentina, venta de cafe">
-
+  
+  
 </head>
 
 <body class="bg-secondary bg-gradient">
@@ -26,7 +27,7 @@
             <div class="row">
               <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="col d-flex justify-content-end">
-                  <a class="navbar-brand" href="#">
+                  <a class="navbar-brand" href="../index.html">
                     <img src="../imagenes/logo.png" alt="imagenlogo" width="130" height="130" class="rounded-circle shadow ">
                         </a>
                     </div>
@@ -37,7 +38,7 @@
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                            <div class="navbar-nav destacado">
+                            <div class="navbar-nav">
                                 <a class="nav-link" href="../index.html"><p class=fs-5>HOME</p></a>
                                 <a class="nav-link" href="menu.html"><p class=fs-5>MENU</p></a>
                                 <a class="nav-link active" href="#"><p class=fs-5>NOSOTROS</p></a>
