--- a/pages/menu.html
+++ b/pages/menu.html
@@ -39,7 +39,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
-                <a class="nav-link" href="../index.html"><p class="fs-5 fondo">HOME</p></a>
+                <a class="nav-link" href="../index.html"><p class="fs-5">HOME</p></a>
                 <a class="nav-link active" href="#"><p class="fs-5">MENU</p></a>
                 <a class="nav-link" href="nosotros.html"><p class="fs-5">NOSOTROS</p></a>
                 <a class="nav-link" href="media.html"><p class=fs-5>MEDIA</p></a>
