--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
 
 </head>
+
 <body class="bg-secondary">
   <header>
     <div class="container-fluid">
@@ -37,11 +38,21 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page " href="#"><p class=fs-5>HOME</p></a>
-                <a class="nav-link" href="./pages/menu.html"><p class=fs-5>MENU</p></a>
-                <a class="nav-link" href="./pages/nosotros.html"><p class=fs-5>NOSOTROS</p></a>
-                <a class="nav-link" href="./pages/media.html"><p class=fs-5>MEDIA</p></a>
-                <a class="nav-link" href="./pages/contacto.html"><p class=fs-5>CONTACTO</p></a>
+                <a class="nav-link active" aria-current="page " href="#">
+                  <p class=fs-5>HOME</p>
+                </a>
+                <a class="nav-link" href="./pages/menu.html">
+                  <p class=fs-5>MENU</p>
+                </a>
+                <a class="nav-link" href="./pages/nosotros.html">
+                  <p class=fs-5>NOSOTROS</p>
+                </a>
+                <a class="nav-link" href="./pages/media.html">
+                  <p class=fs-5>MEDIA</p>
+                </a>
+                <a class="nav-link" href="./pages/contacto.html">
+                  <p class=fs-5>CONTACTO</p>
+                </a>
               </div>
             </div>
           </div>
@@ -130,9 +141,7 @@
       </div>
     </div>
     </footer>
-    <script src="./java/index.js">
-      
-    </script>
+    <script src="./java/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
