--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -15,8 +15,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&family=Open+Sans:wght@300&display=swap"
       rel="stylesheet">
-    <meta name="description" content="conoce el mejor cafe del mundo">
-    <meta name="keywords" content="cafe, comprar cafe, el mejor cafe del mundo, cafe argentina, venta de cafe">
+    <meta name="description" content="contactate con nosotros para comprar el mejor cafe del mundo">
+    <meta name="keywords" content="contacto, trabajar, cafe">
   
   
 
