--- a/pages/media.html
+++ b/pages/media.html
@@ -14,11 +14,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&family=Open+Sans:wght@300&display=swap"
-      rel="stylesheet">
+        rel="stylesheet">
     <meta name="description" content="conoce el mejor cafe del mundo">
     <meta name="keywords" content="cafe, comprar cafe, el mejor cafe del mundo, cafe argentina, venta de cafe">
-  
-  
+
+
 
 </head>
 
@@ -26,10 +26,11 @@
     <header>
         <div class="container-fluid mb-5">
             <div class="row">
-              <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <div class="col d-flex justify-content-end">
-                  <a class="navbar-brand" href="../index.html">
-                    <img src="../imagenes/logo.png" alt="imagenlogo" width="130" height="130"  class="rounded-circle shadow ">
+                <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                    <div class="col d-flex justify-content-end">
+                        <a class="navbar-brand" href="../index.html">
+                            <img src="../imagenes/logo.png" alt="imagenlogo" width="130" height="130"
+                                class="rounded-circle shadow ">
                         </a>
                     </div>
                     <div class="col">
@@ -40,11 +41,21 @@
                         </button>
                         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                             <div class="navbar-nav">
-                                <a class="nav-link" href="../index.html"><p class=fs-5>HOME</p></a>
-                                <a class="nav-link" href="menu.html"><p class=fs-5>MENU</p></a>
-                                <a class="nav-link" href="nosotros.html"><p class=fs-5>NOSOTROS</p></a>
-                                <a class="nav-link active" href="#"><p class=fs-5>MEDIA</p></a>
-                                <a class="nav-link" href="contacto.html"><p class=fs-5>CONTACTO</p></a>
+                                <a class="nav-link" href="../index.html">
+                                    <p class=fs-5>HOME</p>
+                                </a>
+                                <a class="nav-link" href="menu.html">
+                                    <p class=fs-5>MENU</p>
+                                </a>
+                                <a class="nav-link" href="nosotros.html">
+                                    <p class=fs-5>NOSOTROS</p>
+                                </a>
+                                <a class="nav-link active" href="#">
+                                    <p class=fs-5>MEDIA</p>
+                                </a>
+                                <a class="nav-link" href="contacto.html">
+                                    <p class=fs-5>CONTACTO</p>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -79,72 +90,74 @@
 
                 </div>
             </div>
-            <section>
-                <section>
-                    <div class="container">
-                        <div class="row">
-                            <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
-                                <h1 class="display-5 fw-normal">FOTOS</h1>
-                            </div>
-                        </div>
+        </section>
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
+                        <h1 class="display-5 fw-normal">FOTOS</h1>
                     </div>
-                </section>
-                <section>
-                    <div id="galeria" class="container rounded bg-dark bg-gradient  mb-3 ">
-                        <div class="row">
-                            <div class="col-lg-4">
-                                <img src="../imagenes/menu1.jpg" alt="" class="rounded shadow">
-                            </div>
-                            <div class="col-lg-4">
-                                <img src="../imagenes/DALEQUEVA.jpg" alt="" class="rounded shadow">
-                            </div>
-                            <div class="col-lg-4">
-                                <img src="../imagenes/DALEQUEVA1.jpg" alt="" class="rounded shadow">
-                            </div>
-                            <div class="col-lg-4">
-                                <img src="../imagenes/DALEQUEVA2-min.jpg" alt="" class="rounded shadow">
-                            </div>
-                            <div class="col-lg-4">
-                                <img src="../imagenes/menu1.jpg" alt="" class="rounded shadow">
-                            </div>
-                            <div class="col-lg-4">
-                                <img src="../imagenes/DALEQUEVA2-min.jpg" alt="" class="rounded shadow">
-                            </div>
-                            <div class="col-lg-4">
-                                <img src="../imagenes/DALEQUEVA2-min.jpg" alt="" class="rounded shadow">
-                            </div>
-                            <div class="col-lg-4">
-                                <img src="../imagenes/menu1.jpg" alt="" class="rounded shadow">
-                            </div>
-                            <div class="col-lg-4">
-                                <img src="../imagenes/DALEQUEVA2-min.jpg" alt="" class="rounded shadow">
-                            </div>
-                            <div class="col-lg-4">
-                                <img src="../imagenes/DALEQUEVA2-min.jpg" alt="" class="rounded shadow">
-                            </div>
-                            <div class="col-lg-4">
-                                <img src="../imagenes/menu1.jpg" alt="" class="rounded shadow">
-                            </div>
-                            <div class="col-lg-4">
-                                <img src="../imagenes/DALEQUEVA2-min.jpg" alt="" class="rounded shadow">
-                            </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div id="galeria" class="container rounded bg-dark bg-gradient  mb-3 ">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <img src="../imagenes/menu1.jpg" alt="" class="rounded shadow">
+                    </div>
+                    <div class="col-lg-4">
+                        <img src="../imagenes/DALEQUEVA.jpg" alt="" class="rounded shadow">
+                    </div>
+                    <div class="col-lg-4">
+                        <img src="../imagenes/DALEQUEVA1.jpg" alt="" class="rounded shadow">
+                    </div>
+                    <div class="col-lg-4">
+                        <img src="../imagenes/DALEQUEVA2-min.jpg" alt="" class="rounded shadow">
+                    </div>
+                    <div class="col-lg-4">
+                        <img src="../imagenes/menu1.jpg" alt="" class="rounded shadow">
+                    </div>
+                    <div class="col-lg-4">
+                        <img src="../imagenes/DALEQUEVA2-min.jpg" alt="" class="rounded shadow">
+                    </div>
+                    <div class="col-lg-4">
+                        <img src="../imagenes/DALEQUEVA2-min.jpg" alt="" class="rounded shadow">
+                    </div>
+                    <div class="col-lg-4">
+                        <img src="../imagenes/menu1.jpg" alt="" class="rounded shadow">
+                    </div>
+                    <div class="col-lg-4">
+                        <img src="../imagenes/DALEQUEVA2-min.jpg" alt="" class="rounded shadow">
+                    </div>
+                    <div class="col-lg-4">
+                        <img src="../imagenes/DALEQUEVA2-min.jpg" alt="" class="rounded shadow">
+                    </div>
+                    <div class="col-lg-4">
+                        <img src="../imagenes/menu1.jpg" alt="" class="rounded shadow">
+                    </div>
+                    <div class="col-lg-4">
+                        <img src="../imagenes/DALEQUEVA2-min.jpg" alt="" class="rounded shadow">
+                    </div>
+                </div>
+            </div>
 
 
 
-                </section>
+        </section>
 
 
-                <section>
-                    <article>
-                        <div class="containterr shadow">
-                            <div class="redes">
-                                <a href="https://www.facebook.com/" target="blanc" class="icon-facebook"></a>
-                                <a href="https://www.instagram.com/" target="blanc" class="icon-instagram"></a>
-                                <a href="https://www.whatsapp.com/" target="blanc" class="icon-whatsapp"></a>
-                            </div>
-                        </div>
-                    </article>
-                </section>
+        <section>
+            <article>
+                <div class="containterr shadow">
+                    <div class="redes">
+                        <a href="https://www.facebook.com/" target="blanc" class="icon-facebook"></a>
+                        <a href="https://www.instagram.com/" target="blanc" class="icon-instagram"></a>
+                        <a href="https://www.whatsapp.com/" target="blanc" class="icon-whatsapp"></a>
+                    </div>
+                </div>
+            </article>
+        </section>
     </main>
     <footer">
         <div class="container-fluid">
