--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>THE COFFE HOUSE - CONTACTO</title>
+    <title>THE COFFE HOUSE - CARRITO DE COMPRAS</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../scss/estilos.css">
@@ -53,7 +53,7 @@
                                 <a class="nav-link" href="media.html">
                                     <p class=fs-5>MEDIA</p>
                                 </a>
-                                <a class="nav-link active" href="#">
+                                <a class="nav-link" href="contacto.html">
                                     <p class=fs-5>CONTACTO</p>
                                 </a>
                             </div>
@@ -63,7 +63,6 @@
             </div>
         </div>
     </header>
-
     <main>
         <section class="m-1">
             <div class="container">
@@ -95,13 +94,14 @@
                             <label for="floatingTextarea">Ingresá acá tu Email</label>
                         </div>
                         <div class="form-floating mb-3 shadow">
-                            <textarea class="form-control" placeholder="Leave a comment here"
-                                id="floatingTextarea"></textarea>
-                            <label for="floatingTextarea">Comments</label>
+                            <input type="text" class="form-control" id="floatingInput">
+                            <label for="floatingTextarea">
+                                <p>Direccion</p>
+                            </label>
                         </div>
                         <div class="d-grid gap-2 col-6 mx-auto p-3">
-                            <button class="btn btn-primary btn-lg btn-warning shadow destacado"
-                                type="submit">Enviar!</button>
+                            <button class="btn btn-primary btn-lg btn-warning shadow destacado" type="submit">REALIZA TU
+                                COMPRA</button>
                         </div>
 
                     </div>
@@ -110,6 +110,7 @@
 
 
         </section>
+
 
         <section>
             <article>
