--- a/pages/menu.html
+++ b/pages/menu.html
@@ -8,8 +8,8 @@
   <title>THE COFFE HOUSE - MENU</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../scss/estilos.css">
-    <link rel="stylesheet" href="../css/fontello.css">
+  <link rel="stylesheet" href="../scss/estilos.css">
+  <link rel="stylesheet" href="../css/fontello.css">
   <link rel="shortcut icon" href="./imagenes/logo.jpg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -39,11 +39,21 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
-                <a class="nav-link" href="../index.html"><p class="fs-5">HOME</p></a>
-                <a class="nav-link active" href="#"><p class="fs-5">MENU</p></a>
-                <a class="nav-link" href="nosotros.html"><p class="fs-5">NOSOTROS</p></a>
-                <a class="nav-link" href="media.html"><p class=fs-5>MEDIA</p></a>
-                <a class="nav-link" href="contacto.html"><p class=fs-5>CONTACTO</p></a>
+                <a class="nav-link" href="../index.html">
+                  <p class="fs-5">HOME</p>
+                </a>
+                <a class="nav-link active" href="#">
+                  <p class="fs-5">MENU</p>
+                </a>
+                <a class="nav-link" href="nosotros.html">
+                  <p class="fs-5">NOSOTROS</p>
+                </a>
+                <a class="nav-link" href="media.html">
+                  <p class=fs-5>MEDIA</p>
+                </a>
+                <a class="nav-link" href="contacto.html">
+                  <p class=fs-5>CONTACTO</p>
+                </a>
               </div>
             </div>
           </div>
@@ -54,100 +64,16 @@
 
   <main>
 
-    <section>
-      <div class="container">
-        <div class="row">
-          <div id="menu" class="col-sm animacion">
-            <img src="../imagenes/menu2.jpg" class="card-img-top" alt="...">
-            <div class="card-body shadow bg-light">
-              <h5 class="card-title text-center destacado">Opción 1 - Menú ligero</h5>
-              <p class="card-text ">Uno de los menús de más éxito de nuestra cafetería. Cualesquiera de nuestros
-                clientes
-                puede elegir una de las cuatro modalidades ofertadas a diario por un coste de 3,00 $. 1/2 tostada de
-                jamón
-                y queso + café o vaso de leche 1/2 tostada de aceite y tomate + batido de coco 1/2 tostada de aceit
-              </p>
-            </div>
-          </div>
-          <div id="menu"  class="col-sm animacion">
-            <img src="../imagenes/menu1.jpg" class="card-img-top" alt="...">
-            <div class="card-body shadow bg-light ">
-              <h5 class="card-title text-center destacado">Opción 2 - Menú medio</h5>
-              <p class="card-text">Nuestra cafetería es reconocida mundialmente por la extraordinaria calidad de los
-                menús
-                medios ofrecidos. Si pasa por el lugar, no se olvide de probar uno de nuestros riquísimos menús
-                medios.
-                Por el módico precio de 5 $, podrá disfrutar de cualquiera de nuestros menús medios. 1/2 Tostada de
-                tomate
-                + Sandwich de jamón y queso + batido de chocolate o fresa + Zumo de naranja natural en vaso medio
-                Filete
-                de pechuga de pollo + Patatas fritas + Café o Zumo de naranja natural en vaso grande Bacon +
-                Salchichas +
-                Patatas fritas + Café Hamburguesa + Patatas + Refresco.</p>
-            </div>
-          </div>
-          <div id="menu" class="col-sm animacion">
-            <img src="../imagenes/menu3.jpg" class="card-img-top" alt="...">
-            <div class="card-body shadow bg-light ">
-              <h5 class="card-title text-center destacado">Opción 3 Menú especial</h5>
-              <p class="card-text">Se trata de un menú ideal para personas que vienen a desayunar a nuestro local en
-                compañía de sus parejas o amigos. Solamente por 6,50 $ podrá deleitarse de nuestras extraordinarias
-                ofertas de menú especial para los desayunos. 2 Tostadas gratinadas de jamón y queso + 2 cafés solos o
-                con
-                leche + zumos de naranja natural + batido de chocolate 2 Hamburguesas + 2 raciones de Patatas fritas + 2
-                Refrescos 2 Bocadillos de jamón y queso o tortilla + cerveza + café + zumo de naranja en estado natural
-                en
-                vaso grande Patatas fritas + Sandwich de tortilla + Hamburguesa de pollo con queso + Café + Resfresco
-              </p>
-            </div>
-          </div>
-          <div class="row mt-3" ></div>
-            <div id="menu" class="col-sm animacion">
-              <img src="../imagenes/menu2.jpg" class="card-img-top" alt="...">
-              <div class="card-body shadow bg-light">
-                <h5 class="card-title text-center destacado">Opción 1 - Menú ligero</h5>
-                <p class="card-text ">Uno de los menús de más éxito de nuestra cafetería. Cualesquiera de nuestros
-                  clientes
-                  puede elegir una de las cuatro modalidades ofertadas a diario por un coste de 3,00 $. 1/2 tostada de
-                  jamón
-                  y queso + café o vaso de leche 1/2 tostada de aceite y tomate + batido de coco 1/2 tostada de aceit
-                </p>
-              </div>
-            </div>
-            <div id="menu"  class="col-sm animacion">
-              <img src="../imagenes/menu1.jpg" class="card-img-top" alt="...">
-              <div class="card-body shadow bg-light ">
-                <h5 class="card-title text-center destacado ">Opción 2 - Menú medio</h5>
-                <p class="card-text">Nuestra cafetería es reconocida mundialmente por la extraordinaria calidad de los
-                  menús
-                  medios ofrecidos. Si pasa por el lugar, no se olvide de probar uno de nuestros riquísimos menús
-                  medios.
-                  Por el módico precio de 5 $, podrá disfrutar de cualquiera de nuestros menús medios. 1/2 Tostada de
-                  tomate
-                  + Sandwich de jamón y queso + batido de chocolate o fresa + Zumo de naranja natural en vaso medio
-                  Filete
-                  de pechuga de pollo + Patatas fritas + Café o Zumo de naranja natural en vaso grande Bacon +
-                  Salchichas +
-                  Patatas fritas + Café Hamburguesa + Patatas + Refresco.</p>
-              </div>
-            </div>
-            <div id="menu" class="col-sm animacion">
-              <img src="../imagenes/menu3.jpg" class="card-img-top" alt="...">
-              <div class="card-body shadow bg-light ">
-                <h5 class="card-title text-center destacado">Opción 3 Menú especial</h5>
-                <p class="card-text">Se trata de un menú ideal para personas que vienen a desayunar a nuestro local en
-                  compañía de sus parejas o amigos. Solamente por 6,50 $ podrá deleitarse de nuestras extraordinarias
-                  ofertas de menú especial para los desayunos. 2 Tostadas gratinadas de jamón y queso + 2 cafés solos o
-                  con
-                  leche + zumos de naranja natural + batido de chocolate 2 Hamburguesas + 2 raciones de Patatas fritas + 2
-                  Refrescos 2 Bocadillos de jamón y queso o tortilla + cerveza + café + zumo de naranja en estado natural
-                  en
-                  vaso grande Patatas fritas + Sandwich de tortilla + Hamburguesa de pollo con queso + Café + Resfresco
-                </p>
-              </div>
-            </div>
-        </div>
+    <section></section>
+    <div class="container-xl text-center">
+      <div class="row m-1" id="cont">
       </div>
+    </div>
+    <div class="text-center p-3 ">
+      <a href="./carrito.html">
+        <button class="btn btn-lg shadow destacado" style="background-color:#685b4ece;;">CARRITO DE COMPRAS</button>
+      </a>
+    </div>
     </section>
     <section>
       <article>
@@ -173,6 +99,8 @@
       </div>
     </div>
     </footer>
+    <script src="../js/productos.js"></script>
+    <script src="../js/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
