--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -14,21 +14,22 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&family=Open+Sans:wght@300&display=swap"
-      rel="stylesheet">
+        rel="stylesheet">
     <meta name="description" content="conoce el mejor cafe del mundo">
     <meta name="keywords" content="cafe, comprar cafe, el mejor cafe del mundo, cafe argentina, venta de cafe">
-  
-  
+
+
 </head>
 
 <body class="bg-secondary bg-gradient">
     <header>
         <div class="container-fluid mb-5">
             <div class="row">
-              <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <div class="col d-flex justify-content-end">
-                  <a class="navbar-brand" href="../index.html">
-                    <img src="../imagenes/logo.png" alt="imagenlogo" width="130" height="130" class="rounded-circle shadow ">
+                <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                    <div class="col d-flex justify-content-end">
+                        <a class="navbar-brand" href="../index.html">
+                            <img src="../imagenes/logo.png" alt="imagenlogo" width="130" height="130"
+                                class="rounded-circle shadow ">
                         </a>
                     </div>
                     <div class="col">
@@ -39,11 +40,21 @@
                         </button>
                         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                             <div class="navbar-nav">
-                                <a class="nav-link" href="../index.html"><p class=fs-5>HOME</p></a>
-                                <a class="nav-link" href="menu.html"><p class=fs-5>MENU</p></a>
-                                <a class="nav-link active" href="#"><p class=fs-5>NOSOTROS</p></a>
-                                <a class="nav-link" href="media.html"><p class=fs-5>MEDIA</p></a>
-                                <a class="nav-link" href="contacto.html"><p class=fs-5>CONTACTO</p></a>
+                                <a class="nav-link" href="../index.html">
+                                    <p class=fs-5>HOME</p>
+                                </a>
+                                <a class="nav-link" href="menu.html">
+                                    <p class=fs-5>MENU</p>
+                                </a>
+                                <a class="nav-link active" href="#">
+                                    <p class=fs-5>NOSOTROS</p>
+                                </a>
+                                <a class="nav-link" href="media.html">
+                                    <p class=fs-5>MEDIA</p>
+                                </a>
+                                <a class="nav-link" href="contacto.html">
+                                    <p class=fs-5>CONTACTO</p>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -55,24 +66,28 @@
     <main>
 
 
-            <section class="m-1">
-                <div class="container">
-                  <div class="row">
+        <section class="m-1">
+            <div class="container">
+                <div class="row">
                     <div class="col-sm mb-3 bg-dark bg-gradient text-center">
                         <div class="card-body text-light text-center">
                             <h5 class="card-title">¿Por qué elegirnos?</h5>
-                            <p class="card-text">En Espresso tenemos un compromiso con la calidad, la seguridad y la responsabilidad, que
-                              concretamos mediante la implementación de estándares y programas que cumplen con la
-                              legislación vigente y requisitos de nuestros clientes. Nos preocupamos por planificar,
-                              invertir en <span class="destacado"> materiales y humanos, llevar adelante procedimientos normalizados y
-                              monitoreos permanentes, para que su empresa reciba el servicio final que requiere.</span>
-                              Cuidamos hasta el más mínimo detalle, desde la selección óptima de nuestros proveedores
-                              e insumos hasta la estricta preparación de los productos en las máquinas expendedoras,
-                              con el objetivo de que el usuario tenga una opción variada y satisfactoria.</p></p>
-                        <img src="../imagenes/fotomenu.jpg" class="card-img-top rounded" alt="dibujoscafe">
+                            <p class="card-text">En Espresso tenemos un compromiso con la calidad, la seguridad y la
+                                responsabilidad, que
+                                concretamos mediante la implementación de estándares y programas que cumplen con la
+                                legislación vigente y requisitos de nuestros clientes. Nos preocupamos por planificar,
+                                invertir en <span class="destacado"> materiales y humanos, llevar adelante
+                                    procedimientos normalizados y
+                                    monitoreos permanentes, para que su empresa reciba el servicio final que
+                                    requiere.</span>
+                                Cuidamos hasta el más mínimo detalle, desde la selección óptima de nuestros proveedores
+                                e insumos hasta la estricta preparación de los productos en las máquinas expendedoras,
+                                con el objetivo de que el usuario tenga una opción variada y satisfactoria.</p>
+                            </p>
+                            <img src="../imagenes/fotomenu.jpg" class="card-img-top rounded" alt="dibujoscafe">
 
                         </div>
-                      </div>                   
+                    </div>
         </section>
 
         <section>
@@ -100,6 +115,8 @@
             </div>
         </div>
     </footer>
+    <script src="../js/productos.js"></script>
+    <script src="../js/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
