--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -65,6 +65,7 @@
     </header>
 
     <main>
+        <form action="">
         <section class="m-1">
             <div class="container">
                 <div class="row">
@@ -101,13 +102,13 @@
                         </div>
                         <div class="d-grid gap-2 col-6 mx-auto p-3">
                             <button class="btn btn-primary btn-lg btn-warning shadow destacado"
-                                type="submit">Enviar!</button>
+                                type="submit">Enviar</button>
                         </div>
-
+                 
                     </div>
                 </div>
             </div>
-
+        </form>
 
         </section>
 
