--- a/pages/menu.html
+++ b/pages/menu.html
@@ -69,11 +69,13 @@
       <div class="row m-1" id="cont">
       </div>
     </div>
-    <div class="text-center p-3 ">
-      <a href="./carrito.html">
-        <button class="btn btn-lg shadow destacado" style="background-color:#685b4ece;;">CARRITO DE COMPRAS</button>
-      </a>
-    </div>
+    
+    <div class="carritoDeCompras">
+    <a href="./carrito.html" class="d-grid gap-2 subrayado">
+      <button class="btn btn-lg shadow destacado">CARRITO DE COMPRAS</button>
+    </a>
+  </div>
+
     </section>
     <section>
       <article>
