--- a/pages/menu.html
+++ b/pages/menu.html
@@ -63,18 +63,27 @@
   </header>
 
   <main>
+    <div class="container-sm">
+      <div class="row mb-3">
+        <div class="col">
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          </form>
+        </div>
+      </div>
+    </div>
 
     <section></section>
     <div class="container-xl text-center">
       <div class="row m-1" id="cont">
       </div>
     </div>
-    
+
     <div class="carritoDeCompras">
-    <a href="./carrito.html" class="d-grid gap-2 subrayado">
-      <button class="btn btn-lg shadow destacado">CARRITO DE COMPRAS</button>
-    </a>
-  </div>
+      <a href="./carrito.html" class="d-grid gap-2 subrayado">
+        <button class="btn btn-lg shadow destacado">CARRITO DE COMPRAS</button>
+      </a>
+    </div>
 
     </section>
     <section>
