--- a/pages/menu.html
+++ b/pages/menu.html
@@ -72,19 +72,61 @@
         </div>
       </div>
     </div>
-
-    <section></section>
-    <div class="container-xl text-center">
-      <div class="row m-1" id="cont">
+    <section>
+      <div class="container-xl text-center">
+        <div class="row m-1" id="cont">
+        </div>
       </div>
-    </div>
-
-    <div class="carritoDeCompras">
-      <a href="./carrito.html" class="d-grid gap-2 subrayado">
-        <button class="btn btn-lg shadow destacado">CARRITO DE COMPRAS</button>
-      </a>
-    </div>
-
+    </section>
+    <section class="container-xl text-center"> <h2 class="stronge">DETALLE DE LA COMPRA :</h2>
+      <div id="detalleDeCompra" class="row">
+      </div>
+    </section>
+    <section class="container-xl">
+      <form action="">
+        <div class="card p-1 rounded bg-dark bg-gradient">
+          <div class="form-floating mb-3 shadow">
+            <input type="text" class="form-control" id="floatingInput">
+            <label for="floatingTextarea">
+              <p>Nombre</p>
+            </label>
+          </div>
+          <div class="form-floating mb-3 shadow">
+            <input type="text" class="form-control" id="floatingInput">
+            <label for="floatingTextarea">
+              <p>Apellido</p>
+            </label>
+          </div>
+          <div class="form-floating mb-3 shadow">
+            <input type="date" class="form-control" id="floatingInput">
+            <label for="Textarea">
+              <p>Fecha de nacimiento</p>
+            </label>
+          </div>
+          <select class="form-select mb-3 shadow" aria-label="Default select example">
+            <option selected>Sexo</option>
+            <option value="1">Hombre</option>
+            <option value="2">Mujer</option>
+          </select>
+          <div class="form-floating mb-3 shadow">
+            <input type="number" class="form-control" id="floatingInput">
+            <label for="floatingTextarea p-2">Ingresá acá tu Telefono</label>
+          </div>
+          <div class="form-floating mb-3 shadow">
+            <input type="email" class="form-control" id="floatingInput">
+            <label for="floatingTextarea">Ingresá acá tu Email</label>
+          </div>
+          <div class="form-floating mb-3 shadow">
+            <input type="text" class="form-control" id="floatingInput">
+            <label for="floatingTextarea">
+              <p>Direccion</p>
+            </label>
+          </div>
+          <div class="d-grid gap-2 col-6 mx-auto p-3">
+            <button class="btn btn-primary btn-lg btn-warning shadow destacado" type="submit">REALIZA TU
+              COMPRA</button>
+          </div>
+      </form>
     </section>
     <section>
       <article>
