--- a/pages/menu.html
+++ b/pages/menu.html
@@ -78,9 +78,14 @@
         </div>
       </div>
     </section>
-    <section class="container-xl text-center"> <h2 class="stronge">DETALLE DE LA COMPRA :</h2>
+    <section class="container-xl text-center"> <h2 class="stronge">DETALLE COMPRA:</h2>
       <div id="detalleDeCompra" class="row">
       </div>
+      <h2 class="row container-xl text-center" id="total">
+        
+      </h2>
+    </section>
+
     </section>
     <section class="container-xl">
       <form action="">
