--- a/pages/menu.html
+++ b/pages/menu.html
@@ -78,11 +78,11 @@
         </div>
       </div>
     </section>
-    <section class="container-xl text-center"> <h2 class="stronge">DETALLE COMPRA:</h2>
-      <div id="detalleDeCompra" class="row">
+    <section class="container text-center bg-dark text-light rounded"> 
+      <h1 class="stronge text-center">DETALLE COMPRA:</h1>
+      <div class="row m-1" id="detalleDeCompra" >
       </div>
-      <h2 class="row container-xl text-center" id="total">
-        
+      <h2 class="row container" id="total">        
       </h2>
     </section>
 
