--- a/pages/menu.html
+++ b/pages/menu.html
@@ -78,12 +78,13 @@
         </div>
       </div>
     </section>
-    <section class="container text-center bg-dark text-light rounded"> 
+    <section class="container text-center bg-dark text-light rounded mb-3"> 
       <h1 class="stronge text-center">DETALLE COMPRA:</h1>
       <div class="row m-1" id="detalleDeCompra" >
       </div>
       <h2 class="row container" id="total">        
       </h2>
+      <a class="btn btn-primary btn-lg btn-warning shadow destacado m-2" id="borrarTodo">BORRAR TODO</a>
     </section>
 
     </section>
